--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TicketPurchase">
         <activity
+            android:name=".IdiomContentActivity"
+            android:exported="false" />
+        <activity
             android:name=".CollectedIdiomActivity"
+            android:exported="true">
+
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+
 
         </activity>
     </application>
