--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.TicketPurchase"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ReverseChainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
@@ -41,9 +47,6 @@
             android:exported="false" />
         <activity
             android:name=".StarItemActivity"
-            android:exported="false" />
-        <activity
-            android:name=".UserActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
