--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,26 +8,26 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_orange"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon_orange"
         android:supportsRtl="true"
         android:theme="@style/Theme.TicketPurchase"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ReverseChainActivity"
+            android:name=".home.fragment.game.ReverseChainActivity"
             android:exported="false" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".home.activity.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".init.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".init.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".LaunchActivity"
+            android:name=".init.LaunchActivity"
             android:exported="true"
             android:theme="@style/XUITheme.Launch">
             <intent-filter>
@@ -37,19 +37,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".FindActivity"
+            android:name=".home.fragment.game.FindActivity"
             android:exported="false" />
         <activity
-            android:name=".ChainActivity"
+            android:name=".home.fragment.game.ChainActivity"
             android:exported="false" />
         <activity
-            android:name=".IdiomActivity"
+            android:name=".idiom.IdiomActivity"
             android:exported="false" />
         <activity
-            android:name=".StarItemActivity"
+            android:name=".idiom.StarItemActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".home.activity.MainActivity"
             android:exported="true" />
     </application>
 
