--- a/settings.gradle
+++ b/settings.gradle
@@ -15,5 +15,5 @@ dependencyResolutionManagement {
         }
     }
 }
-rootProject.name = "TicketPurchase"
+rootProject.name = "OrangeLanguage"
 include ':app'
